# UCU_C_String

./: .gitignore  CMakeLists.txt  PVS-Studio.cmake  README.md  application.sh  main.c  main.h
compare_efficiency/: CMakeLists.txt  cmp.cpp
cpp_wrapper/: CMakeLists.txt  CString.cpp  CString.h
cstring/include/: library.h
cstring/src/: library.c
docs/: test_out.txt
lib/include/: c_string.h
lib/src/: c_string.c
libb/: CMakeLists.txt  library.c  library.h
libb/include/: library.h
libb/src/: library.c
sso_string/: sso_string.cpp  sso_string.h
tests/: test.c  test.h  tests.c
tests/c_check/: c_check_reaload.sh  test.c  test.check
